PokeDexPackage/main/default/objects/Sprite__c/Sprite__c.object-meta.xml
<CustomObject>
    <description>Sprite images from 2d game art</description>
    <label>Sprite</label>
    <nameField>
        <label>Sprite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sprites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>