PokeDexPackage/main/default/objects/Sprite__c/fields/Back_Default__c.field-meta.xml
<CustomField>
    <fullName>Back_Default__c</fullName>
    <description>The default depiction of this Pokémon from the back in battle.</description>
    <label>Back Default</label>
    <type>Url</type>
</CustomField>