PokeDexPackage/main/default/objects/Sprite__c/fields/Back_Shiny__c.field-meta.xml
<CustomField>
    <fullName>Back_Shiny__c</fullName>
    <description>The shiny depiction of this Pokémon from the back in battle.</description>
    <label>Back Shiny</label>
    <type>Url</type>
</CustomField>