PokeDexPackage/main/default/objects/Sprite__c/fields/Front_Default__c.field-meta.xml
<CustomField>
    <fullName>Front_Default__c</fullName>
    <description>The default depiction of this Pokémon from the front in battle.</description>
    <label>Front Default</label>
    <type>Url</type>
</CustomField>