PokeDexPackage/main/default/objects/Sprite__c/fields/Front_Shiny__c.field-meta.xml
<CustomField>
    <fullName>Front_Shiny__c</fullName>
    <description>The shiny depiction of this Pokémon from the front in battle.</description>
    <label>Front Shiny</label>
    <type>Url</type>
</CustomField>