PokeDexPackage/main/default/objects/Sprite__c/fields/ImageUrl__c.field-meta.xml
<CustomField>
    <fullName>ImageUrl__c</fullName>
    <description>Url for sprite</description>
    <label>ImageUrl</label>
    <type>Url</type>
</CustomField>