PokeDexPackage/main/default/objects/Sprite__c/fields/Pokemon__c.field-meta.xml
<CustomField>
    <fullName>Pokemon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pokemon</label>
    <referenceTo>Pokemon__c</referenceTo>
    <relationshipLabel>Sprites</relationshipLabel>
    <relationshipName>Sprites</relationshipName>
    <type>Lookup</type>
</CustomField>